@@ -39,7 +39,8 @@
 <blockquote>
 <ul class="simple">
 <li>magick/montage.c (MontageImages): Silence Coverity 10255 &quot;Unused
-value&quot;.</li>
+value&quot;.
+(MontageImages): Silence Coverity 10264 &quot;Unused value&quot;.</li>
 </ul>
 </blockquote>
 <p>2015-04-09  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
